# ipfixcol2

./: .gitignore
.github/workflows/: main.yml  packages.yml
.github/workflows/scripts/: upload-packages.sh
docker/: Dockerfile  Dockerfile_s3  README.md
extra_plugins/input/ipfix-s3/: CMakeLists.txt  Config.cpp  Config.hpp  README.rst  S3.cpp  S3.hpp  Streambuf.hpp  ipfix.cpp
extra_plugins/input/ipfix-s3/src/: Config.cpp  Config.hpp  S3Downloader.cpp  S3Downloader.hpp  Statistics.hpp  Streambuf.hpp  ipfix.cpp
extra_plugins/output/clickhouse/: README.rst  schema-helper.py
extra_plugins/output/ipfix-s3/: CMakeLists.txt  README.rst
extra_plugins/output/ipfix-s3/src/: BufferPool.hpp  Config.cpp  Config.hpp  IPFIXOutput.cpp  IPFIXOutput.hpp  IPFIXOutputPlugin.cpp  S3.cpp  S3.hpp  S3Common.cpp  S3Common.hpp  S3Output.cpp  S3Output.hpp  S3Uploader.cpp  S3Uploader.hpp  Statistics.hpp  WrapperStream.hpp
extra_plugins/output/lnfstore/: CMakeLists.txt
extra_plugins/output/lnfstore/src/: configuration.c  lnfstore.c  lnfstore.h  storage_profiles.c  storage_profiles.h
include/: CMakeLists.txt  ipfixcol2.h
include/ipfixcol2/: message_ipfix.h  plugins.h  profiles.h
src/core/: CMakeLists.txt  context.h  message_ipfix.h
src/core/configurator/: configurator.cpp  extensions.cpp
src/core/profiles/: common.c  common.h  pevents.c  pevents.h  pmatcher.c  pmatcher.h  profile.c  profile.h
src/plugins/output/: CMakeLists.txt
src/plugins/output/aggregator/: CMakeLists.txt  README.rst
src/plugins/output/aggregator/doc/: ipfixcol2-aggregator-output.7.rst
src/plugins/output/aggregator/src/: aggregator.cpp  aggregator.hpp  config.cpp  config.hpp  main.cpp
src/plugins/output/overview/: README.rst
src/plugins/output/overview/src/: plugin.cpp  plugin.h
src/plugins/output/printer/: CMakeLists.txt  README.rst
src/plugins/output/printer/doc/: ipfixcol2-printer-output.7.rst
src/plugins/output/printer/src/: Buffer.hpp  Config.cpp  Config.hpp  FormatParser.hpp  LineBuilder.cpp  LineBuilder.hpp  LineElement.hpp  Plugin.cpp  Printer.cpp  Printer.hpp  PrinterOutput.cpp  PrinterOutput.hpp  Protocols.cpp  Protocols.hpp  Protocols.inc  Utils.cpp  Utils.hpp  Writer.hpp  WriterBuilder.hpp  Writers.hpp  generate-services.py  protocols.inc  services.inc
src/plugins/output/profiles/: CMakeLists.txt  profiles.c
src/plugins/output/report/: .gitignore  CMakeLists.txt  README.rst
src/plugins/output/report/doc/: ipfixcol2-report-output.7.rst
src/plugins/output/report/src/: config.cpp  config.hpp  generate_pen_table.py  histogram.hpp  ipfixrun  output.cpp  output.hpp  plugin.cpp  report.cpp  report.hpp  utils.cpp  utils.hpp
tests/unit/: CMakeLists.txt
